--- a/package.json
+++ b/package.json
@@ -19,10 +19,6 @@
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1"
   },
-  "scripts":{
-  	"deploy": "gatsby build --prefix-paths",
-  	"build":"gh-pages -d build"
-  },
   "devDependencies": {
     "prettier": "^1.18.2"
   },
@@ -33,6 +29,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "deploy": "gatsby build && gh-pages -d public -b master",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
